tree-sitter-duck/grammar.js
    source_file: ($) =>
      choice(
        seq(
          $.module_header,
          repeat($._module_statement),
          $.module_return_statement,
        ),
        repeat1($._module_statement),
      ),

    _module_statement: ($) =>
      choice(
        $.declare_effect_statement,
        $.effect_statement,
        $.declare_record_statement,
        $.type_declaration_statement,
        $.duck_declaration_statement,
        $.extension_declaration_statement,
        $.fixity_declaration_statement,
        $.module_binding_statement,
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    _statement: ($) =>
      choice(
        $.effect_binding_statement,
        $.resume_dup_statement,
        $.binding_statement,
        $.type_pattern_statement,
        $.return_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.index_assignment,
        $.assignment,
        $.expression_statement,
      ),

    binding_statement: ($) =>
      seq(
        field("kind", choice("let", "const")),
        optional(field("recursive", "rec")),
        optional(field("linear", "!")),
        field(
          "name",
          choice(
            $.identifier,
            $._aggregate_constructor_identifier,
            $.wildcard,
            $.array_pattern,
            $.positional_product_pattern,
            $.named_product_pattern,
            $.named_shape_pattern,
          ),
        ),
        optional(seq(":", field("type", $.type_reference))),
        "=",
        field("value", $._expression),
      ),

    effect_row: ($) => $._effect_row_expression,

    _effect_row_expression: ($) =>
      choice(
        $.effect_union_expression,
        $.effect_intersection_expression,
        $.effect_difference_expression,
        $.parenthesized_effect_expression,
        $.effect_family_reference,
        $.effect_row_variable,
        $.effect_operation_reference,
      ),

    effect_union_expression: ($) =>
      prec.left(
        PREC.EFFECT_UNION,
        seq(
          field("left", $._effect_row_expression),
          "|",
          field("right", $._effect_row_expression),
        ),
      ),

    effect_family_reference: ($) => field("effect", $.effect_identifier),

    effect_row_variable: ($) => field("name", $.row_variable),

    unit_pattern: () => seq("(", ")"),

    type_declaration_statement: ($) =>
      seq(
        "type",
        field("name", $.identifier),
        repeat(field("parameter", $.identifier)),
        "=",
        field(
          "definition",
          choice(
            $.type_sum,
            $.type_product,
            $.struct_type,
            $.type_reference,
          ),
        ),
      ),

    type_sum: ($) =>
      seq(
        "|",
        $.type_case,
        repeat(seq("|", $.type_case)),
      ),

    type_case: ($) =>
      seq(
        ".",
        field("name", $.identifier),
        optional(
          seq(
            "=",
            field("payload", alias($.type_intersection, $.type_reference)),
          ),
        ),
      ),

    type_product: ($) =>
      choice($.named_type_product, $.positional_type_product),

    named_type_field: ($) =>
      seq(
        ".",
        field("name", $.identifier),
        "=",
        field("type", $.type_reference),
      ),

    positional_type_product: ($) =>
      choice(
        seq("(", commaSep2($.type_reference), ")"),
        seq("[", optional(commaSep1($.type_reference)), "]"),
      ),

    expression_statement: ($) => $._expression,

    _expression: ($) =>
      choice(
        $.try_with_expression,
        $.loop_expression,
        $.arrow_function,
        $.recursive_function,
        $.recursive_call_expression,
        $.if_expression,
        $.match_expression,
        $.binary_expression,
        $.is_expression,
        $.as_expression,
        $.unary_expression,
        $.application_expression,
        $.postfix_expression,
        $.effect_handler_expression,
      ),

    arrow_function: ($) =>
      prec.right(
        PREC.ARROW,
        seq(
          field(
            "parameters",
            choice($.parameter, $.parameter_list, $.bracket_parameter_list),
          ),
          "=>",
          field("body", $._expression),
        ),
      ),

    parameter_list: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      seq(
        optional("const"),
        optional("!"),
        field("name", choice($.identifier, $.wildcard)),
        optional(seq(":", field("type", $.type_reference))),
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          choice(
            ifLetCondition($),
            seq("(", ifLetCondition($), ")"),
            field("condition", $.condition_expression),
          ),
          field("consequence", prec.dynamic(10, $.block)),
          optional(
            seq(
              "else",
              field(
                "alternative",
                choice(
                  prec.dynamic(10, $.block),
                  prec.dynamic(10, $.if_expression),
                ),
              ),
            ),
          ),
        ),
      ),

    condition_expression: ($) =>
      choice(
        $.condition_binary_expression,
        $.condition_is_expression,
        $.condition_unary_expression,
        $.condition_call_expression,
        $.condition_field_expression,
        $.condition_index_expression,
        $.condition_parenthesized_expression,
        $.number,
        $.string,
        $.character,
        $.boolean,
        $.atom_expression,
        $.intrinsic_identifier,
        alias("loop", $.identifier),
        $.identifier,
        $._aggregate_constructor_identifier,
        alias($.effect_identifier, $.identifier),
        $.linear_reference,
        $.union_case,
      ),

    condition_is_expression: ($) =>
      prec.left(
        PREC.COMPARE,
        seq(
          field("value", $.condition_expression),
          field("operator", "is"),
          field("type", $.type_reference),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        ["||", PREC.OR],
        ["&&", PREC.AND],
        [choice("==", "!="), PREC.EQUALITY],
        [choice("<", "<=", ">", ">="), PREC.COMPARE],
        [choice("+", "-"), PREC.ADD],
        [choice("*", "/", "%"), PREC.MULTIPLY],
        [$.operator_symbol, PREC.ADD],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          )
        ),
      );
    },

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field(
            "operator",
            choice(
              "-",
              "!",
              "&",
              "freeze",
              "comptime",
              $.operator_symbol,
            ),
          ),
          field("operand", $._expression),
        ),
      ),

    application_expression: ($) =>
      prec.left(
        PREC.APPLICATION,
        choice(
          seq(
            field(
              "function",
              choice($.application_expression, $.postfix_expression),
            ),
            $._application_space,
            field("argument", $.postfix_expression),
          ),
          seq(
            field(
              "function",
              choice($.application_expression, $.postfix_expression),
            ),
            field("argument", $.parenthesized_or_product),
          ),
        ),
      ),

    postfix_expression: ($) =>
      choice(
        $.field_expression,
        $.index_expression,
        $.update_expression,
        $._primary_expression,
      ),

    field_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        choice(
          seq(
            field("object", $.postfix_expression),
            ".",
            field("field", $.identifier),
          ),
          seq(
            field("object", alias($.effect_identifier, $.identifier)),
            ".",
            field("field", $.identifier),
          ),
        ),
      ),

    _primary_expression: ($) =>
      choice(
        $.number,
        $.string,
        $.character,
        $.boolean,
        alias("loop", $.identifier),
        $.identifier,
        $._aggregate_constructor_identifier,
        alias($.effect_identifier, $.identifier),
        $.intrinsic_identifier,
        $.atom_expression,
        $.import_expression,
        $.named_product,
        $.positional_product,
        $.union_case,
        $.linear_reference,
        $.unit_pattern,
        $.array_expression,
        $.array_repeat_expression,
        $.object_literal,
        $.scratch_expression,
        $.block,
        $.parenthesized_expression,
      ),

    atom_expression: ($) =>
      seq(
        "#",
        field("name", alias($.row_variable, $.identifier)),
      ),

    struct_type: ($) => seq("struct", field("fields", $.type_field_block)),

    named_product: ($) => prec(1, seq("[", commaSep1($.product_field), "]")),

    product_field: ($) =>
      seq(
        $._named_product_dot,
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),

    parenthesized_or_product: ($) =>
      choice(
        $.unit_pattern,
        $.named_product,
        $.positional_product,
        $.parenthesized_expression,
      ),

    array_expression: ($) =>
      seq(
        "[",
        optional(
          choice(
            commaSep1($._expression),
            prec.dynamic(
              1,
              seq(
                $.array_spread,
                ",",
                commaSep1($._expression),
              ),
            ),
            seq(
              optional(seq(commaSep1($._expression), ",")),
              $.array_spread,
            ),
          ),
        ),
        "]",
      ),

    type_field_block: ($) =>
      seq(
        "{",
        repeat(seq(choice($.type_field, $.named_type_field), optional(","))),
        "}",
      ),

    block: ($) => seq("{", repeat($._statement), "}"),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    // Surface types use whitespace application (`List a`) and right
    // associative arrows (`a -> b`).  Keep the existing type_reference node
    // as the wrapper so simple annotations retain their old tree shape.
    type_reference: ($) => $._type_expression,

    _type_expression: ($) =>
      choice($.forall_type, $.function_type, $.type_union),

    forall_type: ($) =>
      prec.right(
        PREC.TYPE_ARROW,
        seq(
          "forall",
          repeat1(field("parameter", $.identifier)),
          ".",
          field("body", $._type_expression),
        ),
      ),

    function_type: ($) =>
      prec.right(
        PREC.TYPE_ARROW,
        seq(
          field("parameter", $.type_union),
          "->",
          optional(field("effects", $.latent_effect_row)),
          field("result", $._type_expression),
        ),
      ),

    type_union: ($) =>
      prec.left(
        PREC.TYPE_UNION,
        choice(
          $.type_intersection,
          seq(
            field("left", $.type_union),
            "|",
            field("right", $.type_intersection),
          ),
        ),
      ),

    type_intersection: ($) =>
      prec.left(
        PREC.TYPE_INTERSECTION,
        choice(
          $.type_difference,
          seq(
            field("left", $.type_intersection),
            "&",
            field("right", $.type_difference),
          ),
        ),
      ),

    type_difference: ($) =>
      prec.left(
        PREC.TYPE_DIFFERENCE,
        choice(
          $._type_application,
          seq(
            field("left", $.type_difference),
            "\\",
            field("right", $._type_application),
          ),
        ),
      ),

    latent_effect_row: ($) => seq("<", field("row", $.effect_row), ">"),

    _type_application: ($) => choice($.type_application, $._type_prefix),

    type_application: ($) =>
      prec.left(
        PREC.TYPE_APPLICATION,
        seq(
          field("constructor", choice($.type_application, $._type_prefix)),
          $._type_application_space,
          field("argument", $._type_prefix),
        ),
      ),

    _type_prefix: ($) =>
      choice($.atom_type, $.frozen_type, $.borrow_type, $._type_atom),

    atom_type: ($) =>
      seq(
        "#",
        field("name", alias($.row_variable, $.identifier)),
      ),

    frozen_type: ($) =>
      seq(
        "#",
        choice(
          field("name", alias($.effect_identifier, $.identifier)),
          $.type_parenthesized,
        ),
      ),

    borrow_type: ($) => seq("&", choice($.identifier, $.type_parenthesized)),

    unit_type: () => prec(-1, seq("(", ")")),

    top_type: () => "_",

    type_parenthesized: ($) =>
      seq("(", field("value", $._type_expression), ")"),

    _aggregate_constructor_identifier: ($) => alias("struct", $.identifier),

    _named_product_dot: () => token(prec(1, ".")),

    identifier: () => token(/[A-Za-z][A-Za-z0-9_]*/),

    operator_symbol: () =>
      token(
        prec(
          2,
          choice(
            "<>",
            "<*>",
            "<$>",
            ">>=",
            "<|>",
            "|>",
            "<|",
            /[~^?$][-!$%&*+\/<=>?@\\^|~]*/,
            /@[-!$%&*+\/<=>?@\\^|~]+/,
            /[-!%&*+\/<=>\\|][~^?$@][-!$%&*+\/<=>?@\\^|~]*/,
            /[+*%][+*%\/]+/,
            /--+/,
            /<<+/,
            />>+/,
            /===+/,
            /!!+/,
            /&&&+/,
            /\|\|\|+/,
          ),
        ),
      ),

    effect_identifier: () => token(prec(1, /[A-Z][A-Za-z0-9]*/)),

    row_variable: () => /[a-z_][A-Za-z0-9_]*/,

    number: () => /[0-9]+(i32|i64)?/,

    string: () => /"([^"\\]|\\[ntr"\\])*"/,

    character: () => /'([^'\\\n\r]|\\[ntr'\\])'/,

    boolean: () => choice("true", "false"),
